--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,23 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
+#root {
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.map {
+  height: 100%;
+  width: 100%;
 }
 
-.App-link {
-  color: #09d3ac;
+.card {
+  z-index: 999;
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  width: 310px;
+  height: 388px;
 }
